# manifest

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  api_client.py  constant.py  file_processor.py  main.py  pyproject.toml  repository_manager.py  requirements.txt  steam_app_manager.py
.github/: dependabot.yml
.github/workflows/: build.yml
src/: main.py
src/core/: api_client.py  constants.py
src/services/: file_service.py  github_service.py  steam_service.py
src/steam_manifest/: __init__.py  cli.py  constants.py  github.py  network.py  steam.py  storage.py
src/steam_manifest/core/: __init__.py  constants.py  github.py  network.py  steam.py  storage.py
tests/: conftest.py  run_test.py  test_github.py  test_network.py  test_steam.py  test_storage.py
