[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "steam-manifest"
version = "4.0.2"
description = "Steam manifest parser and downloader"
readme = "README.md"
authors = [
    { name = "arisvia", email = "160387885+arisvia@users.noreply.github.com" }
]
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "aiohttp[speedups]",
    "cachetools",
    "vdf",
    "loguru",
    "rich",
    "orjson",
    "tenacity",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "types-aiofiles",
    "types-cachetools"
]

[project.scripts]
steam-manifest = "steam_manifest.cli:main"

[tool.mypy]
python_version = "3.12"
strict_optional = true
no_implicit_optional = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
pretty = true
show_error_codes = true

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=steam_manifest --cov-report=term-missing"
testpaths = ["tests"]
asyncio_mode = "auto"
